# khonliang-bus

./: .gitignore  CLAUDE.md  README.md  code_review.md  go.sum  pyproject.toml  python_code_review.md
bus/: __init__.py  __main__.py  agent.py  artifacts.py  db.py  discovery.py  flows.py  mcp_adapter.py  orchestrator.py  response_envelope.py  scheduler.py  server.py  testing.py  versions.py  webhook_install.py  webhooks.py  welcome.json
config/: bus.yaml
docs/: agent-lifecycle.md  bus-transport-contract.md  log-agent-design.md  repo-hygiene-audit.md  webhook-management.md  webhook-setup.md
python/: README.md  pyproject.toml
python/khonliang_bus/: __init__.py  client.py
python/tests/: test_client.py
scripts/: install-github-webhook.sh
tests/: conftest.py  test_agent.py  test_agent_log_files.py  test_agent_provenance.py  test_agent_registration.py  test_agent_welcome.py  test_agent_ws.py  test_artifacts.py  test_autostart.py  test_boot_reconciliation.py  test_bus_self_welcome.py  test_bus_services_probe.py  test_bus_welcome.py  test_client_updates.py  test_db.py  test_diagnose.py  test_flows.py  test_gaps.py  test_lazy_load.py  test_learnings.py  test_lifecycle.py  test_liveness.py  test_liveness_reconcile.py  test_log_agent.py  test_mcp_adapter.py  test_observability.py  test_orchestrator.py  test_pubsub.py  test_registry.py  test_request.py  test_response_envelope.py  test_scheduler.py  test_session_context.py  test_sessions.py  test_supervisor.py  test_uds_discovery.py  test_versions.py  test_wait_for_event.py  test_webhook_cli.py  test_webhook_install.py  (+2 more)
(+27 files in other folders)
