[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "khonliang-bus"
version = "0.1.0"
description = "Python client for khonliang-bus, a cross-app event bus and service registry"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Tim Toll" }]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["khonliang_bus*"]
